# 1StopSellingBot

./: .env.example  .gitignore  AGENTS.md  README.md  benchmark_metrics.py  makefile  pyproject.toml  requirement.md  seed_data.py  streamlit_app.py
.codegraph/: daemon.pid
admin-ui/: package.json  pnpm-lock.yaml  vite.config.ts
admin-ui/src/: index.css  main.tsx  routeTree.gen.ts
admin-ui/src/routes/: __root.tsx  conversations.tsx  index.tsx  inventory.tsx  login.tsx  orders.tsx  products.tsx  rag-documents.tsx  rag.tsx  staff.tsx
admin-ui/src/store/: auth.ts
app/: config.py  constants.py  main.py
app/agents/: advisor.py  inventory_agent.py  orchestrator.py  order_agent.py
app/models/: schemas.py
app/routers/: auth.py  chat.py  escalation.py  inventory.py  orders.py  products.py  rag.py  skills.py  staff.py  ws.py
app/services/: embedding.py  escalation.py  llm.py  rag.py  telegram.py  websocket.py
docs/superpowers/specs/: 2026-06-07-predefined-skill-list-design.md
supabase/migrations/: 002_create_core_tables.sql  003_create_search_functions.sql  004_create_low_stock_function.sql  005_grant_anon_access.sql  006_phase2_escalation_tables.sql  007_add_auth_fields_to_staff.sql
