[project]
name = "selling-bot"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.135.2",
    "google-adk>=1.28.0",
    "google-genai>=1.68.0",
    "httpx>=0.28.1",
    "litellm>=1.82.6",
    "pydantic-settings>=2.13.1",
    "python-multipart>=0.0.22",
    "streamlit>=1.55.0",
    "supabase>=2.28.3",
    "uvicorn>=0.42.0",
]
